--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -32,7 +32,7 @@ ru:
   product_description: Описание продукта
   add_to_cart: Купить
   out_of_stock: Нет в наличии
-  let_us_know_if_you_want_the_product: Напишите нам для того, что бы узнать дату поступления
+  let_us_know_if_you_want_the_product: Напишите нам для того, что бы узнать дату поступления и уточнить цену
   # orders
   new_order: Новый заказ
   delivery_address: Адрес доставки
