replace link to blog with a link to faq

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -4,6 +4,7 @@ ru:
   delivery_payment: Доставка и оплата
   contacts: Контакты
   blog: Блог
+  faq: ЧАВО
   cart: Корзина
   orders_history: Мои заказы
   is_new_user: Новый пользователь?
