--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -13,6 +13,8 @@ ru:
   sign_up: Зарегистрироваться
   sign_out: Выйти
   or: или
+  # sidebar
+  products: Товары
   # home/faq
   guaranty: Гарантия
   # home/delivery
