--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -71,7 +71,7 @@ ru:
   status: Статус
   notes: Примичание
   processing: Обрабатывается
-  shipped: Доаставлен
+  shipped: Доставлен
   cancelled: Отменен
   items: Вещи
   more: Далее
